--- a/Score Counter/index.html
+++ b/Score Counter/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess The Number</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Guess The Number</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Score Counter</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="container">
+        <h1>Score Counter</h1>
+        <div class="counter-container">
+          <p id="counter1" class="counter">0</p>
+
+          <div class="hifun">-</div>
+
+          <p id="counter2" class="counter">0</p>
+        </div>
+        <button class="btn" id="reset1">Reset</button>
+      </div>
+    </div>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
